# QT-TimeIsMoney

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.cpp  config.hpp  externalapi.hpp  externalapi.ui  externalapi_db.cpp  externalapi_db.hpp  externalapi_helpers.cpp  externalapi_send.cpp  externalapi_send.hpp  info.txt  main.c  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  stream_board.ino  updater.cpp  updater.hpp
TimeIsMoneyExternalApi_CMake/: CMakeLists.txt  externalapi.cpp  externalapi_helpers.hpp
installer_repository/: 2022-05-17-1914_meta.7z  Updates.xml
installer_repository/com.timeismoney.root/: 1.0.3content.7z  1.0.3content.7z.sha1  1.0.3meta.7z
installer_template/config/: config.xml  config.xml.txt
src/: TimeIsMoney.pro  config.cpp  config.h  cserialreader.h  info.txt  invoice.cpp  invoice.h  invoice.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  serialPortConfig.json  serialoptions.cpp  serialoptions.h  serialoptions.ui  serialreader.cpp  serialreader.h  serialreader_qt.cpp  serialreader_qt.h  serialreader_utils.h  task.cpp  task.h  taskdb.cpp  taskdb.h  tasklist.cpp  tasklist.h  test.scxml  test_config.h  updater.cpp  updater.h
